lib_LTLIBRARIES        = libusrsctp.la
libusrsctp_la_SOURCES  = opt_compat.h \
                         opt_inet6.h \
                         opt_ipsec.h \
                         opt_sctp.h \
                         user_atomic.h \
                         user_environment.c user_environment.h \
                         user_inpcb.h \
                         user_ip6_var.h \
                         user_malloc.h \
                         user_mbuf.c \
                         user_mbuf.h \
                         user_radix.h \
                         user_recv_thread.c user_recv_thread.h \
                         user_resourcevar.h \
                         user_route.h \
                         user_sctp_timer_iterate.c \
                         user_socket.c \
                         user_socketvar.h \
                         user_uma.h \
                         netinet/sctp.h \
                         netinet/sctp_asconf.c netinet/sctp_asconf.h \
                         netinet/sctp_auth.c netinet/sctp_auth.h \
                         netinet/sctp_bsd_addr.c netinet/sctp_bsd_addr.h \
                         netinet/sctp_callout.c netinet/sctp_callout.h \
                         netinet/sctp_cc_functions.c \
                         netinet/sctp_constants.h \
                         netinet/sctp_crc32.c netinet/sctp_crc32.h \
                         netinet/sctp_dtrace_declare.h \
                         netinet/sctp_dtrace_define.h \
                         netinet/sctp_hashdriver.c netinet/sctp_hashdriver.h \
                         netinet/sctp_header.h \
                         netinet/sctp_indata.c netinet/sctp_indata.h \
                         netinet/sctp_input.c netinet/sctp_input.h \
                         netinet/sctp_lock_userspace.h \
                         netinet/sctp_os.h \
                         netinet/sctp_os_userspace.h \
                         netinet/sctp_output.c netinet/sctp_output.h \
                         netinet/sctp_pcb.c netinet/sctp_pcb.h \
                         netinet/sctp_peeloff.c netinet/sctp_peeloff.h \
                         netinet/sctp_process_lock.h \
                         netinet/sctp_sha1.c netinet/sctp_sha1.h \
                         netinet/sctp_ss_functions.c \
                         netinet/sctp_structs.h \
                         netinet/sctp_sysctl.c netinet/sctp_sysctl.h \
                         netinet/sctp_timer.c netinet/sctp_timer.h \
                         netinet/sctp_uio.h \
                         netinet/sctp_usrreq.c \
                         netinet/sctp_var.h \
                         netinet/sctputil.c netinet/sctputil.h
